# Alternite

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
assets/shaders/: FBO.glsl  Quad.glsl  Text.glsl
cmake/: CPM.cmake
src/: main.cpp
src/Alternite/: Game.h
src/Core/: Common.h  Events.h  Game.cpp  Game.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Scene.h
src/ECS/: ComponentArray.h  ComponentManager.h  ECS.cpp  ECS.h  EntityManager.h  SystemManager.h
src/Game/: Components.h  Entity.h  Game.cpp  Game.h  Ground.cpp  Ground.h  Player.cpp  Player.h  SpriteManager.cpp  SpriteManager.h  Systems.cpp  Systems.h
src/Game/Systems/: InputSystem.h  PhysicsSystem.h  RenderSystem.h
src/Renderer/: Camera.cpp  Camera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Rendererable.cpp  Rendererable.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/Renderer/Text/: Font.cpp  Font.h  platform.c  platform.h
